--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "production": "webpack -p",
-    "start": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "start": "webpack -p && node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.11.0",
+    "express": "^4.13.4",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-router": "^2.4.0",
